# mini-fast-projects

./: README.md
tic-tac-toe/: CMakeLists.txt  README.md  game.cpp
